[package]
name = "low-profile"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
description = "A no-std HTTP Server inspired by Axum, built for embedded"
license = "MIT"
categories = ["no-std", "embedded", "asynchronous", "network-programming", "web-programming::http-server"]
repository = "https://github.com/Dav1dde/low-profile"
edition = "2021"

[dependencies]
embedded-io = { version = "0.4", features = ["async"] }
httparse = { version = "1.8", default-features = false }
heapless = { version = "0.7", default-features = false }
